force-app/main/default/objects/Customer_Call_Automation__c/Customer_Call_Automation__c.object-meta.xml
<CustomObject>
    <label>Customer Call Automation</label>
    <nameField>
        <label>Customer Call Automation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Call Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>