force-app/main/default/objects/Customer_Call_Automation__c/fields/Age_at_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Maturity__c</fullName>
    <formula>IF( DATE( 2000 , MONTH( Date_of_Birth__c ) , DAY( Date_of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Date_of_Birth__c ) +  (Party__r.genesis__Application__r.genesis__Term__c/12),
     YEAR (Today()) - YEAR ( Date_of_Birth__c ) +  (Party__r.genesis__Application__r.genesis__Term__c/12) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Maturity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>