force-app/main/default/objects/Customer_Call_Automation__c/fields/AML_search_result_check__c.field-meta.xml
<CustomField>
    <fullName>AML_search_result_check__c</fullName>
    <formula>IF(INCLUDES(Party__r.clcommon__Account__r.AML_search_result__c, &apos;PEP&apos;) ||
INCLUDES(Party__r.clcommon__Account__r.AML_search_result__c, &apos;GWL&apos;), True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML search result check</label>
    <type>Checkbox</type>
</CustomField>