force-app/main/default/objects/Customer_Call_Automation__c/fields/Are_you_comfortable_that_the_credit_arra__c.field-meta.xml
<CustomField>
    <fullName>Are_you_comfortable_that_the_credit_arra__c</fullName>
    <label>Are you comfortable that the credit arra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>