force-app/main/default/objects/Customer_Call_Automation__c/fields/Based_on_item_comment__c.field-meta.xml
<CustomField>
    <fullName>Based_on_item_comment__c</fullName>
    <label>Based on item comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>