force-app/main/default/objects/Customer_Call_Automation__c/fields/Business_Purposes_Comment__c.field-meta.xml
<CustomField>
    <fullName>Business_Purposes_Comment__c</fullName>
    <label>Business Purposes Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>