force-app/main/default/objects/Customer_Call_Automation__c/fields/Can_you_confirm_loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Can_you_confirm_loan_Amount__c</fullName>
    <label>Can you confirm loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>