force-app/main/default/objects/Customer_Call_Automation__c/fields/Can_you_reconfirm_dependents__c.field-meta.xml
<CustomField>
    <fullName>Can_you_reconfirm_dependents__c</fullName>
    <label>Can you reconfirm dependents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>