force-app/main/default/objects/Customer_Call_Automation__c/fields/Childcare_Comment__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Comment__c</fullName>
    <label>Childcare Comment</label>
    <type>TextArea</type>
</CustomField>