force-app/main/default/objects/Customer_Call_Automation__c/fields/Clothing_Personal_Care_Comment__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Personal_Care_Comment__c</fullName>
    <label>Clothing &amp; Personal Care Comment</label>
    <type>TextArea</type>
</CustomField>