force-app/main/default/objects/Customer_Call_Automation__c/fields/Construction_Comment__c.field-meta.xml
<CustomField>
    <fullName>Construction_Comment__c</fullName>
    <label>Construction Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>