force-app/main/default/objects/Customer_Call_Automation__c/fields/Credit_Analyst_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Name__c</fullName>
    <label>Credit Analyst Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>