force-app/main/default/objects/Customer_Call_Automation__c/fields/Credit_Analyst_Section_Comment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Section_Comment__c</fullName>
    <label>Credit Analyst Section Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>