force-app/main/default/objects/Customer_Call_Automation__c/fields/Credit_Analyst_Signature__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Signature__c</fullName>
    <label>Credit Analyst Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>