force-app/main/default/objects/Customer_Call_Automation__c/fields/Credit_Analyst_Signature_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Signature_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Analyst Signature Check</label>
    <type>Checkbox</type>
</CustomField>