force-app/main/default/objects/Customer_Call_Automation__c/fields/Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_And_Time__c</fullName>
    <label>Date &amp; Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>