force-app/main/default/objects/Customer_Call_Automation__c/fields/Date_Of_Birth_Comment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Comment__c</fullName>
    <label>Date Of Birth Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>