force-app/main/default/objects/Customer_Call_Automation__c/fields/Date_Of_Birth_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Confirmed__c</fullName>
    <label>Date Of Birth Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>