force-app/main/default/objects/Customer_Call_Automation__c/fields/Education_Comment__c.field-meta.xml
<CustomField>
    <fullName>Education_Comment__c</fullName>
    <label>Education Comment</label>
    <type>TextArea</type>
</CustomField>