force-app/main/default/objects/Customer_Call_Automation__c/fields/Education_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Education_Confirm__c</fullName>
    <inlineHelpText>Does this include books, uniforms, enrolment fees, excursions &amp; camps etc.?</inlineHelpText>
    <label>Education Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>