force-app/main/default/objects/Customer_Call_Automation__c/fields/Education_Private_School_Fees_Comment__c.field-meta.xml
<CustomField>
    <fullName>Education_Private_School_Fees_Comment__c</fullName>
    <label>Education – Private School Fees Comment</label>
    <type>TextArea</type>
</CustomField>