force-app/main/default/objects/Customer_Call_Automation__c/fields/Email_Confirm_Comment__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirm_Comment__c</fullName>
    <label>Email Confirm Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>