force-app/main/default/objects/Customer_Call_Automation__c/fields/Employer_Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_Check__c</fullName>
    <label>Employer Address Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>