force-app/main/default/objects/Customer_Call_Automation__c/fields/Financial_Advice_Comment__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advice_Comment__c</fullName>
    <label>Financial Advice Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>