force-app/main/default/objects/Customer_Call_Automation__c/fields/Full_Legal_Name_Comment__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name_Comment__c</fullName>
    <label>Full Legal Name Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>