force-app/main/default/objects/Customer_Call_Automation__c/fields/Fund_Source_Other_Comment__c.field-meta.xml
<CustomField>
    <fullName>Fund_Source_Other_Comment__c</fullName>
    <label>Fund Source Other Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>