force-app/main/default/objects/Customer_Call_Automation__c/fields/Groceries_Comment__c.field-meta.xml
<CustomField>
    <fullName>Groceries_Comment__c</fullName>
    <label>Groceries Comment</label>
    <type>TextArea</type>
</CustomField>