force-app/main/default/objects/Customer_Call_Automation__c/fields/Have_you_received_financial_advice_reg__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_financial_advice_reg__c</fullName>
    <label>Have you received financial advice reg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>