force-app/main/default/objects/Customer_Call_Automation__c/fields/Income_Confirm_Comment__c.field-meta.xml
<CustomField>
    <fullName>Income_Confirm_Comment__c</fullName>
    <label>Income Confirm Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>