force-app/main/default/objects/Customer_Call_Automation__c/fields/Income_Source_Other_Comment__c.field-meta.xml
<CustomField>
    <fullName>Income_Source_Other_Comment__c</fullName>
    <label>Income Source Other Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>