force-app/main/default/objects/Customer_Call_Automation__c/fields/Income_Sources_Answer__c.field-meta.xml
<CustomField>
    <fullName>Income_Sources_Answer__c</fullName>
    <label>Income Sources Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>