force-app/main/default/objects/Customer_Call_Automation__c/fields/Insurance_Comment__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Comment__c</fullName>
    <label>Insurance Comment</label>
    <type>TextArea</type>
</CustomField>