force-app/main/default/objects/Customer_Call_Automation__c/fields/Insurance_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Confirm__c</fullName>
    <inlineHelpText>Does this include Home, Contents, Car and Pet?</inlineHelpText>
    <label>Insurance Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>