force-app/main/default/objects/Customer_Call_Automation__c/fields/Insurance_Private_Health_Comment__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Private_Health_Comment__c</fullName>
    <label>Insurance – Private Health Comment</label>
    <type>TextArea</type>
</CustomField>