force-app/main/default/objects/Customer_Call_Automation__c/fields/Insurance_Private_Health_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Private_Health_Confirm__c</fullName>
    <label>Insurance – Private Health Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>