force-app/main/default/objects/Customer_Call_Automation__c/fields/Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Period__c</fullName>
    <formula>Party__r.genesis__Application__r.genesis__Interest_Only_Period__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Only Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>