force-app/main/default/objects/Customer_Call_Automation__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <formula>TEXT(Party__r.genesis__Application__r.genesis__Interest_Rate__c) &amp; &quot;% per annum&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Rate</label>
    <type>Text</type>
</CustomField>