force-app/main/default/objects/Customer_Call_Automation__c/fields/Investment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Investment_Comment__c</fullName>
    <label>Investment Comment</label>
    <type>TextArea</type>
</CustomField>