force-app/main/default/objects/Customer_Call_Automation__c/fields/IO_Period_Interest_Confirm__c.field-meta.xml
<CustomField>
    <fullName>IO_Period_Interest_Confirm__c</fullName>
    <label>IO Period Interest Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>