force-app/main/default/objects/Customer_Call_Automation__c/fields/Lender_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Lender_Confirmed__c</fullName>
    <label>Lender Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>