force-app/main/default/objects/Customer_Call_Automation__c/fields/Maintenance_Alimony_Comment__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Alimony_Comment__c</fullName>
    <label>Maintenance/Alimony Comment</label>
    <type>TextArea</type>
</CustomField>