force-app/main/default/objects/Customer_Call_Automation__c/fields/Medical_Health_Comment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Health_Comment__c</fullName>
    <label>Medical &amp; Health Comment</label>
    <type>TextArea</type>
</CustomField>