force-app/main/default/objects/Customer_Call_Automation__c/fields/Medical_Health_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Medical_Health_Confirm__c</fullName>
    <inlineHelpText>Does this include doctors, pharmaceuticals excluding Private Health?</inlineHelpText>
    <label>Medical &amp; Health Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>