force-app/main/default/objects/Customer_Call_Automation__c/fields/Memberships_Comment__c.field-meta.xml
<CustomField>
    <fullName>Memberships_Comment__c</fullName>
    <label>Memberships Comment</label>
    <type>TextArea</type>
</CustomField>