force-app/main/default/objects/Customer_Call_Automation__c/fields/Memberships_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Memberships_Confirm__c</fullName>
    <inlineHelpText>Does this include gym, subscriptions, or sporting groups?</inlineHelpText>
    <label>Memberships Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>