force-app/main/default/objects/Customer_Call_Automation__c/fields/Mobile_Confirm_Comment__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Confirm_Comment__c</fullName>
    <label>Mobile Confirm Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>