force-app/main/default/objects/Customer_Call_Automation__c/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <formula>Party__r.genesis__Application__r.Monthly_Repayments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>